--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
 
     body {
-        background: url(assets/asset\ 7.jpeg) no-repeat ;
+        background: url(asset\ 7.jpeg) no-repeat ;
         background-size: 100%;
         font-family: "Nanum Gothic", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     }
@@ -432,7 +432,7 @@
     <section class="ad1">
         <div class="container ad1content">
             <div class="imgad1 con1 ">
-                <img src="assets/asset 7.jpeg" alt="">
+                <img src="asset 7.jpeg" alt="">
             </div>
             <div class="contentad con2">
                 <h1>Why DirectoryAds</h1>
@@ -459,7 +459,7 @@
         <div class="container">
 
             <div class="imgsec1">
-                <img src="assets/asset 5.jpeg" alt="">
+                <img src="asset 5.jpeg" alt="">
             </div>
 
             <div class="readmore">
@@ -489,7 +489,7 @@
 
                 <div class="persons">
                     <div class="prs1 prs">
-                        <img src="assets/person_1.jpg" alt="">
+                        <img src="person_1.jpg" alt="">
                         <h3>Susan Horton</h3>
                         <a href="#">FOUNDER</a>
                         <p>
@@ -500,7 +500,7 @@
 
                     </div>
                     <div class="prs2 prs">
-                        <img src="assets/asset 3.jpeg" alt="">
+                        <img src="asset 3.jpeg" alt="">
                         <h3>Susan Horton</h3>
                         <a href="#">FOUNDER</a>
                         <p>
@@ -509,7 +509,7 @@
                         </p>
                     </div>
                     <div class="prs3 prs">
-                        <img src="assets/asset 2.jpeg" alt="">
+                        <img src="asset 2.jpeg" alt="">
                         <h3>Gordon Meyer</h3>
                         <a href="#">LEAD DEVELOPER</a>
                         <p>
@@ -518,7 +518,7 @@
                         </p>
                     </div>
                     <div class="prs4 prs">
-                        <img src="assets/asset 0.jpeg" alt="">
+                        <img src="asset 0.jpeg" alt="">
                         <h3>Doug Hale Kennedy</h3>
                         <a href="#">PROJECTMANAGER</a>
                         <p>
