--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
 
     body {
-        background: url(assets/asset\ 7.jpeg) no-repeat;
+        background: url(assets/asset 7.jpeg) no-repeat;
         background-size: 100%;
         font-family: "Nanum Gothic", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     }
